# Instant-Messenger-Cpp

./: .gitignore  Dockerfile  Makefile  README.md  README.txt  config.txt  docker-compose.yml
Instant-Messenger/: CMakeLists.txt  Makefile  TODO  client  config.txt  docker-compose.yml  makefile  server
Instant-Messenger/include/: client.h  server.h
Instant-Messenger/include/client/: ConnectionKeeper.hpp  client.h  client_communication_manager.h  client_message_manager.h  user_interface.h
Instant-Messenger/include/proxy_fe/: ProxyFE.hpp
Instant-Messenger/include/server/: ConnectionMonitor.hpp  Election.hpp  FeAddressBook.hpp  Group.hpp  ReplicationManager.hpp  ServersRing.hpp  server.h  server.hpp  server_communication_manager.h  server_group_manager.h  server_group_manager.hpp  server_message_manager.hpp
Instant-Messenger/include/util/: ConnectionKeeper.hpp  Packet.hpp  Semaphore.hpp  Socket.hpp  StringConstants.hpp  Uuid.hpp  definitions.hpp  exceptions.hpp  file_system_manager.hpp  message.h  message.hpp  user.hpp
Instant-Messenger/messages/: .csv  CASSIANOFODATOTAL.csv  SampleRoom1.csv  SampleRoom2.csv  TESTE2.csv  ragnarok.csv  ragnarok10.csv
Instant-Messenger/src/: app_client.cpp  app_server.cpp  client.cpp  server.cpp
Instant-Messenger/src/app/: app_client.cpp  app_proxy_fe.cpp  app_server.cpp
Instant-Messenger/src/client/: ConnectionKeeper.cpp  addresses.txt  client.cpp  client_message_manager.cpp  user_interface.cpp
Instant-Messenger/src/proxy_fe/: ProxyFE.cpp
Instant-Messenger/src/server/: ConnectionMonitor.cpp  Election.cpp  FeAddressBook.cpp  Group.cpp  ReplicationManager.cpp  ServersRing.cpp  server.cpp  server_group_manager.cpp  server_message_manager.cpp
Instant-Messenger/src/util/: ConnectionKeeper.cpp  ConnectionMonitor.cpp  Semaphore.cpp  Socket.cpp  Uuid.cpp  file_system_manager.cpp  message.cpp  user.cpp
demo/: catch.hpp  client.c  factorial.cpp  factorial_test.cpp  server.c  sum_test.cpp  tester.cpp
(+21 files in other folders)
